--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
@@ -23,19 +23,21 @@ jobs:
         with:
           node-version: '20.x'
 
-      - name: npm install, build, and test
+      - name: npm install and build
         env:
-          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}      
+          NEXT_PUBLIC_API_ENDPOINT: ${{ secrets.NEXT_PUBLIC_API_ENDPOINT }}
         run: |
           npm install
-          npm run build --if-present
-          npm run test --if-present
+          npm run build
 
-      - name: Copy artifact for deployment job
+      - name: Prepare artifact for deployment
         run: |
-          mkdir deploy
-          cp -r ./.next/standalone/. ./deploy
-          cp -r ./.next/static/. ./deploy/.next/static
+          mkdir -p deploy
+          cp -r ./.next ./deploy/
+          cp -r ./public ./deploy/
+          cp -r ./node_modules ./deploy/
+          cp next.config.js ./deploy/
+          cp package.json ./deploy/
 
       - name: Zip artifact for deployment
         run: zip release.zip ./deploy -r
