--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
@@ -33,9 +33,8 @@ jobs:
       - name: Prepare artifact for deployment
         run: |
           mkdir -p deploy
-          cp -r ./.next ./deploy/
+          cp -r ./build ./deploy/
           cp -r ./public ./deploy/
-          cp -r ./node_modules ./deploy/
           cp next.config.js ./deploy/
           cp package.json ./deploy/
 
