--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
@@ -33,7 +33,14 @@ jobs:
       - name: Prepare artifact for deployment
         run: |
           mkdir -p deploy
-          cp -r ./build ./deploy/
+          # Standaloneモードのビルド成果物をコピー
+          cp -r ./build/* ./deploy/
+          # server.jsは確実にコピー
+          cp server.js ./deploy/
+          cp web.config ./deploy/
+          # パッケージ関連ファイルをコピー
+          cp package.json ./deploy/
+          cp next.config.js ./deploy/
           # Check if public directory exists before copying
           if [ -d "./public" ]; then
             cp -r ./public ./deploy/
@@ -41,8 +48,13 @@ jobs:
             # Create an empty public directory if it doesn't exist
             mkdir -p ./deploy/public
           fi
-          cp next.config.js ./deploy/
-          cp package.json ./deploy/
+          # Next.jsの要件に応じてキャッシュを保持
+          mkdir -p ./deploy/.next
+          if [ -d "./build/.next/cache" ]; then
+            cp -r ./build/.next/cache ./deploy/.next/
+          fi
+          # スタートアップスクリプトの設置
+          echo "web: node server.js" > ./deploy/Procfile
 
       - name: Zip artifact for deployment
         run: zip release.zip ./deploy -r
