fix deploy build path

--- a/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
+++ b/.github/workflows/main_app-001-step3-1-suzuyu-node-62.yml
@@ -34,7 +34,7 @@ jobs:
         run: |
           mkdir -p deploy
           # Standaloneモードのビルド成果物をコピー
-          cp -r ./build/* ./deploy/
+          cp -r ./build ./deploy/
           # server.jsは確実にコピー
           cp server.js ./deploy/
           cp web.config ./deploy/
